# notes-linker

./: .gitignore  config.yaml  pyproject.toml  run.py  start.py  tests.py
notes_linker/: run.py
notes_linker/modules/: fileImporter.py  linkSearch.py  markdownNote.py
src/: markdownNote.py  parser.py  traverseFiles.py
tests/: test_notes_linker.py
